# Res-Scan

./: .gitignore  README.md  pyproject.toml  run.bat  website_asset_inventory_project_plan.md
app/: __init__.py  cli.py  config.py  db.py  extractor.py  jobs.py  main.py  models.py  scanner.py  session_store.py  tools.py
app/static/: style.css
app/templates/: index.html
tests/: test_db.py  test_extractor.py  test_scanner_dedupe.py  test_sites_api.py
